  [Michele Simionato]
  * Introduced a new parameter `ebrisk_maxweight` in the job.ini
  * For classical calculations with few sites, store information about the
    realization closest to the mean hazard curve for each site
  * Removed the max_num_sites limit on the event based calculator


  [Valerio Poggi]
  * Added an AvgSA intensity measure type and a GenericGmpeAvgSA which is
    able to use it

  [Michele Simionato]
  * Introduced the ability to launch subtasks from tasks
  * Stored rupture information in classical calculations with few sites

  [Chris Van Houtte]
  * Adding conversion from geometric mean to larger horizontal component in
    bradley_2013.py

  [Michele Simionato]
  * Fixed a bug in applyToSources for the case of multiple sources
  * Moved the prefiltering on the workers to save memory
  * Exported the aggregated loss ratios in avg losses and agg losses
  * Removed the variables quantile_loss_curves and mean_loss_curves: they
    were duplicating quantile_hazard_curves and mean_hazard_curves
  * Only ruptures boundingbox-close to the site collection are stored

  [Marco Pagani]
  * Added cluster model to classical PSHA calculator

  [Michele Simionato]
  * Fixed a bug in scenario_damage from ShakeMap with noDamageLimit=0
  * Avoided the MemoryError in the controller node by speeding up the saving
    of the information about the sources
  * Turned utils/reduce_sm into a proper command
  * Fixed a wrong coefficient in the ShakeMap amplification
  * Fixed a bug in the hazard curves export (the filename did not contain
    the period of the IMT thus producing duplicated files)
  * Parallelized the reading of the exposure

  [Marco Pagani]
  * Fixed the implementation on mutex ruptures

  [Michele Simionato]
  * Changed the aggregated loss curves exporter
  * Added an experimental calculator ebrisk
  * Changed the ordering of the events (akin to a change of seed in the
    asset correlation)

  [Robin Gee]